k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: groupsapp
  labels:
    app.kubernetes.io/name: groupsapp
