k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: groupsapp-alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groupsapp-alb
  namespace: groupsapp
spec:
  ingressClassName: alb
  rules:
    - host: app.licitdata.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: groupsapp-api-gateway
                port:
                  number: 80
